checks/cloud/google/compute/restrict_ssh_access.yaml
terraform:
  links:
    - https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_firewall
  good:
    - |-
      resource "google_compute_firewall" "good_example" {
        name    = "allow-ssh-from-specific-ip"
        network = "default"

        allow {
          protocol = "tcp"
          ports    = ["22"]
        }

        source_ranges = ["192.168.1.0/24"]
        target_tags   = ["ssh-allowed"]
      }
    - |-
      resource "google_compute_firewall" "allow-ssh-from-office" {
        name    = "allow-ssh-from-office"
        network = "default"

        allow {
          protocol = "tcp"
          ports    = ["22"]
        }

        source_ranges = ["203.0.113.0/24"]
        target_tags   = ["web-servers"]
      }
  bad:
    - |-
      resource "google_compute_firewall" "bad_example" {
        name    = "allow-ssh-from-anywhere"
        network = "default"

        allow {
          protocol = "tcp"
          ports    = ["22"]
        }

        source_ranges = ["0.0.0.0/0"]
        target_tags   = ["ssh-allowed"]
      }
    - |-
      resource "google_compute_firewall" "allow-ssh-public" {
        name    = "allow-ssh-public"
        network = "default"

        allow {
          protocol = "tcp"
          ports    = ["22"]
        }

        source_ranges = ["0.0.0.0/0"]
      }
